# bp2sc

./: .gitignore  README.md  plan_structuration_sota.md  pyproject.toml
docs/: bp3_ast_spec.md  bp3_ebnf.xml  bp3_to_sc_rules.md  comparison_report_final.md  formalism_reference.md  grammar_analysis_results.json  midi_comparison_report.md  midi_comparison_report_detailed.md  sc_idioms.md  structure_inference_evaluation.md  warning_analysis_phase8.md
examples/: demo_morphing.scd
src/bp2sc/: __init__.py  __main__.py  alphabet_parser.py  ast_nodes.py  cli.py  note_converter.py  sc_emitter.py  sc_templates.py  scale_map.py  settings_parser.py
src/bp2sc/data/: scale_map.json
src/bp2sc/grammar/: bp3.lark  parser.py  transformer.py
src/bp2sc/structure_inference/: __init__.py  grouping.py  gttm_rules.py  io.py  polymetric.py
tests/: sclang_trace.py  test_emitter.py  test_golden.py  test_note_converter.py  test_parser.py  test_sclang_trace.py  test_structure_inference.py
tests/golden/: 12345678.bp  12345678.expected.scd  ruwet.bp  ruwet.expected.scd
tests/reference/: Ruwet.mid
tools/: compare_all_grammars.py  compare_all_midi.py  compare_bp3_sc.py  compare_ruwet_midi.py  compare_temporal.py  full_comparison.py  generate_all_midi.sh  generate_all_midi_v2.sh  generate_all_midi_v3.sh  publish_article.py
