[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bp2sc"
version = "0.1.0"
description = "Transpiler from Bol Processor BP3 grammars to SuperCollider Patterns"
requires-python = ">=3.11"
dependencies = [
    "lark>=1.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
bp2sc = "bp2sc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
